@@ -1,3 +1,8 @@
+2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.texi (Customizing the IMAP Connection): Mention the other
+	authenticators.
+
 2012-12-24  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.texi (Browse Foreign Server): Document
