@@ -1,5 +1,9 @@
 2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-authenticator): Expand to allow specifying the
+	login methods.
+	(nnimap-login): Respect the `nnimap-authenticator' variable.
+
 	* gnus-sum.el (gnus-summary-push-marks-to-backend): Push the complete
 	mark state when moving articles.  Otherwise unticked articles will get
 	their ticks back after moving.
